<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailScreen">


    <TextView
        android:id="@+id/minhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_minha_lista"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/preferidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_preferidos"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minhaLista" />

    <HorizontalScrollView
        android:id="@+id/carrosselpreferidos"
        android:layout_width="420dp"
        android:layout_height="285dp"
        app:layout_constraintTop_toBottomOf="@+id/preferidos"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/minhaLista">

            <ImageView
                android:id="@+id/imagelista1"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/divinoamor" />

            <ImageView
                android:id="@+id/imagelista2"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/doutrinador" />

            <ImageView
                android:id="@+id/imagelista3"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/bacurau" />

        </LinearLayout>

    </HorizontalScrollView>
    <TextView
        android:id="@+id/popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_assistir"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carrosselpreferidos" />

    <HorizontalScrollView
        android:id="@+id/carrosselFilmePopular"
        android:layout_width="420dp"
        android:layout_height="285dp"
        app:layout_constraintTop_toBottomOf="@+id/popular"
        tools:layout_editor_absoluteX="-3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/minhaLista">

            <ImageView
                android:id="@+id/imagepopular1"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/medidapro" />

            <ImageView
                android:id="@+id/imagepopular2"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/minhamae3" />

            <ImageView
                android:id="@+id/imagepopular3"
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/quehoraselavolta" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>